--- a/css/main.css
+++ b/css/main.css
@@ -26,15 +26,16 @@ nav{
     text-transform: uppercase;
     position: sticky;
     top: 0%;
-    width: 10%;
     background-color: white;
 }
 
 nav ul{
     width: 20%;
+
 }
 
-nav ul li{
+nav ul li {
+    color: #000;
     width: 100%;
 }
 
@@ -148,7 +149,7 @@ text-align: center;}
 
 #logo{
     width: 190px;
-    margin: 10px;
+    margin: px;
     padding: 0px 10px;
     /* border: 1px solid #000000; */
 }
@@ -184,15 +185,12 @@ h2{
 
 
 
-/* .carousel{
-    background-color: aqua;
-}
-
-
-
 .carousel-item{
-   background-color: aqua
-    text-align: center;
-}
- */
 
+}
+
+.carousel{
+    border: 1px solid black;
+    height: 600px;
+    width: auto;
+}
