--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ nav ul li a:link{
 
 
     #about h2{
-        font-family:"AauxPro-LightSC";
+        font-family:"Helvetica Neue";
         width: 20%;
         text-transform: uppercase;
         margin-right:100px;
@@ -66,28 +66,27 @@ nav ul li a:link{
     }
 
 #about p{
-    width: 60%;
+        width: 60%;
         /* border: 1px solid black; */
         text-align: right;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         line-height: 1.5em;
         font-size: .8em;
         float: left;
-        padding: 0px;
-        margin-top:0%;
 }
 
 .a-box{
         /* background-color: hotpink; */
         margin: auto;
-        width: 50%;
         overflow: hidden;
-        margin-bottom: 4em;
+        margin-bottom: 8em;
 }
 
 
+
+
 .division{
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .division h3{
@@ -132,6 +131,7 @@ nav ul li a:link{
     margin-top: 0px;}
 
 .me{margin-left: 10%;}
+.mei{margin-left: 20%;}
 .mee{margin-left:50%; } 
 .meee{margin-left:40%; }
 
@@ -190,8 +190,6 @@ h2{
 }
 
 
-
-
 .carousel{
     border: 1px solid black;
 }
@@ -202,9 +200,6 @@ h2{
 
 
 
-.zimg{
-    z-index: -1;
-}
 
 .titlew{
     border: 1px solid green;
@@ -214,10 +209,9 @@ h2{
 }
 
 
-.carousel-item{
+/* .carousel-item{
     margin: 10px;
-}
-
+} */
 
 /* label focus color */
 .input-field input[type=text]:focus + label {
@@ -228,3 +222,15 @@ h2{
     border-bottom: 1px solid #000;
     box-shadow: 0 1px 0 0 #000;
   }
+
+
+
+button{
+text-transform: uppercase;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    font-family: "AauxPro-Regular";
+    width: 100%;
+    background-color: black;
+}
